force-app/main/default/objects/Order/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BC-355 person who approved/rejected the order (either requisition or quote)</description>
    <inlineHelpText>person who approved/rejected the order (either requisition or quote)</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requisition_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>