force-app/main/default/objects/Order/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Orders - Do Not Use (Billing Address)</relationshipLabel>
    <relationshipName>BillingAddressOrders</relationshipName>
    <type>Lookup</type>
</CustomField>