force-app/main/default/objects/Order/fields/Can_Convert_Quote__c.field-meta.xml
<CustomField>
    <fullName>Can_Convert_Quote__c</fullName>
    <description>BC-617 indicates if a quote can be converted to order</description>
    <formula>AND(
  Is_Quote_Order__c,
  ISPICKVAL(Type, &apos;Quote&apos;),
  ISPICKVAL(Approval_Status__c, &apos;Pending&apos;),
  NOT(ISBLANK(Quote_Number__c)),
  TODAY() - 30 &lt; DATEVALUE(OrderedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>indicates if a quote can be converted to order</inlineHelpText>
    <label>Can Convert Quote</label>
    <type>Checkbox</type>
</CustomField>