force-app/main/default/objects/Order/fields/Created_in_Epicor__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Epicor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created in Epicor</label>
    <type>Checkbox</type>
</CustomField>