force-app/main/default/objects/Order/fields/Is_Quote_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BC-502 indicates if quote was requested for that order</description>
    <inlineHelpText>indicates if quote was requested for that order</inlineHelpText>
    <label>Is Quote Order</label>
    <type>Checkbox</type>
</CustomField>