force-app/main/default/objects/Order/fields/Is_Requisition_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Requisition_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BC-410</description>
    <inlineHelpText>BC-410</inlineHelpText>
    <label>Is Requisition Order</label>
    <type>Checkbox</type>
</CustomField>