force-app/main/default/objects/Order/fields/Order_Integration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Order_Integration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For orders that are created in Epicor indicates that all order lines were already created and the order summary can be created for it</description>
    <inlineHelpText>For orders that are created in Epicor indicates that all order lines were already created and the order summary can be created for it</inlineHelpText>
    <label>Order Integration Complete</label>
    <type>Checkbox</type>
</CustomField>