force-app/main/default/objects/Order/fields/Origin_Cart__c.field-meta.xml
<CustomField>
    <fullName>Origin_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Orders - Do Not Use</relationshipLabel>
    <relationshipName>SplitOrders</relationshipName>
    <type>Lookup</type>
</CustomField>