force-app/main/default/objects/Order/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <formula>IF(PaymentOption__c = &quot;netTerms&quot;, &quot;PO&quot;,
IF(PaymentOption__c = &quot;creditcard&quot;, &quot;CC&quot;,
IF(PaymentOption__c = &quot;CC&quot;, &quot;CC&quot;,
&quot;&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>