force-app/main/default/objects/Order/fields/PaymentOption__c.field-meta.xml
<CustomField>
    <fullName>PaymentOption__c</fullName>
    <label>Payment Option</label>
    <length>40</length>
    <type>Text</type>
</CustomField>