force-app/main/default/objects/Order/fields/QuoteEXPDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteEXPDate__c</fullName>
    <label>QuoteEXPDate</label>
    <type>Date</type>
</CustomField>