force-app/main/default/objects/Order/fields/Ship_Order_Complete__c.field-meta.xml
<CustomField>
    <fullName>Ship_Order_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BC-539 indicates if order can be shipped partially or not</description>
    <inlineHelpText>indicates if order can be shipped partially or not</inlineHelpText>
    <label>Ship Order Complete</label>
    <type>Checkbox</type>
</CustomField>