force-app/main/default/objects/Order/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <formula>Ship_To_Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Address</label>
    <type>Text</type>
</CustomField>