force-app/main/default/objects/Order/fields/Ship_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Email_Address__c</fullName>
    <formula>Ship_To_Account__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Email Address</label>
    <type>Text</type>
</CustomField>