force-app/main/default/objects/Order/fields/Ship_To_Epicor_ID__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Epicor_ID__c</fullName>
    <formula>Ship_To_Account__r.AccountNumber_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Epicor ID</label>
    <type>Text</type>
</CustomField>