force-app/main/default/objects/Order/fields/Ship_To_Fax__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Fax__c</fullName>
    <formula>Ship_To_Account__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Fax</label>
    <type>Text</type>
</CustomField>