force-app/main/default/objects/Order/fields/Ship_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone__c</fullName>
    <formula>Ship_To_Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Phone</label>
    <type>Text</type>
</CustomField>