force-app/main/default/objects/Order/fields/Ship_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zip_Code__c</fullName>
    <formula>Ship_To_Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Zip Code</label>
    <type>Text</type>
</CustomField>