force-app/main/default/objects/Order/fields/UseOTS__c.field-meta.xml
<CustomField>
    <fullName>UseOTS__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UseOTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>